# allassignmens-ros-id-33

./: .gitignore  .prepare-env.sh  bot_startup.sh  computer_startup.sh  image_aug.ipynb  ssh_ai_vehicles  ssh_ai_vehicles.pub
.github/workflows/: ci.yml
launch/: computer_launch.py  turtlebot_launch.py
src/avai_messages/: CMakeLists.txt  package.xml
src/avai_messages/msg/: Cones.msg  Track.msg
src/camera_package/: package.xml  setup.py
src/camera_package/camera_package/: camera_node.py  hmi.py  image_display_node.py  image_processing_node.py  lidar_node.py
src/camera_package/test/: camera_node_test.py  image_display_node_test.py  image_processing_node_test.py
src/demo_package/: package.xml  setup.py
src/demo_package/demo_package/: pub.py  sub.py
src/lidar_mock/: package.xml  setup.cfg  setup.py
src/lidar_mock/lidar_mock/: lidar_icp_mock_node.py  lidar_mock_node.py
src/move_package/: move_pub.py  package.xml  setup.cfg  setup.py
src/move_package/move_package/move_package/: move_pub.py
src/movement_controller/: package.xml  setup.cfg  setup.py
src/movement_controller/movement_controller/: autonomous.py  controller_node.py  path_integration.py
src/movement_controller/test/: autonomous_test.py  controller_node_test.py  path_integration_test.py
src/sensor_fusion_package/: package.xml  setup.cfg  setup.py
src/sensor_fusion_package/fusion_package/: cone_localization_node.py  icp.py  lidar_info_node.py  sensor_fusion.py
src/sensor_fusion_package/test/: cone_localization_node_test.py
weights/: label.yaml
