<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="avai@unconfigured.de">ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <!-- <depend>sys</depend> -->
  <!-- <depend>pyqt5</depend> --> <!-- Rosdep can not resolve pyqt5 or sys and I don't know why -->
  <depend>std_msgs</depend>
  <depend>python3-opencv</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
